tests/baselines/reference/typeArgInference2.errors.txt
tests/cases/compiler/typeArgInference2.ts(12,52): error TS2345: Argument of type '{ name: string; b: number; }' is not assignable to parameter of type '{ name: string; a: number; }'.
  Object literal may only specify known properties, and 'b' does not exist in type '{ name: string; a: number; }'.


==== tests/cases/compiler/typeArgInference2.ts (1 errors) ====
    interface Item {
        name: string;
    }
    
    declare function foo<T extends Item>(x?: T, y?: T): T;
    
    var z1 = foo(null);                   // any
    var z2 = foo();                       // Item
    var z3 = foo({ name: null });         // { name: any }
    var z4 = foo({ name: "abc" });        // { name: string }
    var z5 = foo({ name: "abc", a: 5 });  // { name: string; a: number }
    var z6 = foo({ name: "abc", a: 5 }, { name: "def", b: 5 });  // error
                                                       ~~~~
!!! error TS2345: Argument of type '{ name: string; b: number; }' is not assignable to parameter of type '{ name: string; a: number; }'.
!!! error TS2345:   Object literal may only specify known properties, and 'b' does not exist in type '{ name: string; a: number; }'.